--- a/index.html
+++ b/index.html
@@ -1,94 +1,124 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./assets/favicon-32x32.png"
-    />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./assets/favicon-32x32.png"
+        />
 
-    <title>Frontend Mentor | Tic Tac Toe</title>
-  </head>
-  <body>
-    <div class="AppContainer">
-      <div class="AppContainer__content">
-        <div class="NewGame__container">
-          <header class="NewGame__header">
-            <img class="Game__logo" src="" alt="Game Logo" />
-          </header>
+        <link rel="stylesheet" href="styles/app.css" />
+        <title>Frontend Mentor | Tic Tac Toe</title>
+    </head>
+    <body>
+        <div class="AppContainer">
+            <div class="AppContainer__content">
+                <div class="NewGame__container">
+                    <header class="NewGame__header">
+                        <img
+                            class="Game__logo"
+                            src="./assets/logo.svg"
+                            alt="Game Logo"
+                        />
+                    </header>
 
-          <div class="NemGame__playerMarkContainer">
-            <div class="PlayerMarkContainer">
-              <header class="PlayerMarkContainer__header">
-                <p class="PlayerMarkContainer__title">Pick player 1's mark</p>
-              </header>
-              <div class="PlayerMarkContainer__content">
-                <div class="PlayerMarkContainer__markContainer">
-                  <ul class="PlayerMarkContainer__markList">
-                    <li class="MarkItem">
-                      <span class="MarkItem__wrapper"
-                        ><img class="MarkItem__icon" src="" alt="X Mark icon"
-                      /></span>
-                    </li>
+                    <div class="NemGame__playerMarkContainer">
+                        <div class="PlayerMarkContainer">
+                            <header class="PlayerMarkContainer__header">
+                                <p class="PlayerMarkContainer__title">
+                                    Pick player 1's mark
+                                </p>
+                            </header>
+                            <div class="PlayerMarkContainer__content">
+                                <div class="PlayerMarkContainer__markContainer">
+                                    <ul class="PlayerMarkContainer__markList">
+                                        <li class="MarkItem">
+                                            <button
+                                                id="markBtn-X"
+                                                class="MarkBtn"
+                                                type="button"
+                                            >
+                                                <span
+                                                    class="MarkBtn__iconWrapper"
+                                                >
+                                                    <svg
+                                                        width="32"
+                                                        height="32"
+                                                        viewBox="0 0 66 66"
+                                                        xmlns="http://www.w3.org/2000/svg"
+                                                    >
+                                                        <path
+                                                            d="M51.12 1.269c.511 0 1.023.195 1.414.586l9.611 9.611c.391.391.586.903.586 1.415s-.195 1.023-.586 1.414L44.441 32l17.704 17.705c.391.39.586.902.586 1.414 0 .512-.195 1.024-.586 1.415l-9.611 9.611c-.391.391-.903.586-1.415.586a1.994 1.994 0 0 1-1.414-.586L32 44.441 14.295 62.145c-.39.391-.902.586-1.414.586a1.994 1.994 0 0 1-1.415-.586l-9.611-9.611a1.994 1.994 0 0 1-.586-1.415c0-.512.195-1.023.586-1.414L19.559 32 1.855 14.295a1.994 1.994 0 0 1-.586-1.414c0-.512.195-1.024.586-1.415l9.611-9.611c.391-.391.903-.586 1.415-.586s1.023.195 1.414.586L32 19.559 49.705 1.855c.39-.391.902-.586 1.414-.586Z"
+                                                            stroke-width="2"
+                                                        />
+                                                    </svg>
+                                                </span>
+                                            </button>
+                                        </li>
 
-                    <li class="MarkItem SelectedMark">
-                      <span class="MarkItem__wrapper"
-                        ><img class="MarkItem__icon" src="" alt="O Mark icon"
-                      /></span>
-                    </li>
-                  </ul>
+                                        <li class="MarkItem">
+                                            <button
+                                                id="markBtn-O"
+                                                class="MarkBtn MarkBtn--selected"
+                                                type="button"
+                                            >
+                                                <span
+                                                    class="MarkBtn__iconWrapper"
+                                                >
+                                                    <svg
+                                                        width="32"
+                                                        height="32"
+                                                        viewBox="0 0 66 66"
+                                                        xmlns="http://www.w3.org/2000/svg"
+                                                    >
+                                                        <path
+                                                            d="M33 1c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C15.327 65 1 50.673 1 33 1 15.327 15.327 1 33 1Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z"
+                                                            stroke-width="2"
+                                                        />
+                                                    </svg>
+                                                </span>
+                                            </button>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <p class="PlayerMarkContainer__description">
+                                    Remember: X goes first
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="NewGame__opponentContainer">
+                        <div class="OpponentContainer">
+                            <ul class="OpponentContainer__opponentList">
+                                <li class="OpponentItem">
+                                    <button
+                                        id="opponent-btn-cpu"
+                                        type="button"
+                                        class="OpponentBtn OpponentBtn--cpu bg--O"
+                                    >
+                                        New Game (vs CPU)
+                                    </button>
+                                </li>
+                                <li class="OpponentItem">
+                                    <button
+                                        id="opponent-btn-player"
+                                        type="button"
+                                        class="OpponentBtn OpponentBtn--player bg--X"
+                                    >
+                                        New Game (vs player)
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <p class="PlayerMarkContainer__description">
-                  Remember: X goes first
-                </p>
-              </div>
             </div>
-          </div>
-
-          <div class="NewGame__opponentContainer">
-            <ul class="OpponentContainer__opponentList">
-              <li class="OpponentItem">
-                <button
-                  id="opponent-btn-cpu"
-                  type="button"
-                  class="OpponentBtn OpponentBtn--cpu"
-                >
-                  New Game (vs CPU)
-                </button>
-              </li>
-              <li class="OpponentItem">
-                <button
-                  id="opponent-btn-player"
-                  type="button"
-                  class="OpponentBtn OpponentBtn--player"
-                >
-                  New Game (vs player)
-                </button>
-              </li>
-            </ul>
-          </div>
         </div>
-
-        <!-- Game board start -->
-        <!-- x/o icon -->
-        turn X (You)
-        <!-- Your score -->
-        Ties
-        <!-- Ties score -->
-        X (CPU)
-        <!-- CPU score -->
-        Oh no, you lost You won! Player
-        <!-- 1/2 -->
-        wins!
-        <!-- x/o icon -->
-        takes the round Round tied Restart game? Quit Next round No, cancel Yes,
-        restart
-        <!-- Game board end -->
-      </div>
-    </div>
-  </body>
+        <script src="scripts/app.js"></script>
+    </body>
 </html>
